DTO Created, Controllers updated, TokenService, Migration made, ng service shower created

--- a/showering_app/appsettings.Development.json
+++ b/showering_app/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=shower-app.db"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
