--- a/showering_app/appsettings.json
+++ b/showering_app/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebApiDatabase": "Data Source=LocalDatabase.db"
+    "DefaultConnection": "Data Source=shower-app.db"
   },
   "Logging": {
       "LogLevel": {
